// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders 1`] = `
<DocumentFragment>
  <div
    class="tab light"
    data-testid="tab"
  >
    <span>
      Tab Name
    </span>
  </div>
</DocumentFragment>
`;

exports[`renders 2`] = `
<DocumentFragment>
  <div
    class="tab selected light"
    data-testid="tab"
  >
    <span>
      Tab Name
    </span>
  </div>
</DocumentFragment>
`;

exports[`renders 3`] = `
<DocumentFragment>
  <div
    class="tab dark"
    data-testid="tab"
  >
    <span>
      Tab Name
    </span>
  </div>
</DocumentFragment>
`;

exports[`renders 4`] = `
<DocumentFragment>
  <div
    class="tab light"
    data-testid="tab"
  />
</DocumentFragment>
`;
